Add additionaly symmetries as options and fix pathing bound and appearance rate for land and mountain